Syncing _pages/68-2.md from WordPress at https://www.umw.edu/essentials (Eagle Essentials) - wpghs

--- a/_pages/68-2.md
+++ b/_pages/68-2.md
@@ -4,7 +4,7 @@ post_title: ""
 author: Shelley Keith
 post_excerpt: ""
 layout: page
-permalink: http://www.umw.edu/essentials/68-2/
+permalink: https://www.umw.edu/essentials/
 published: true
 post_date: 2016-05-31 12:39:35
 ---
